--- a/prepros.config
+++ b/prepros.config
@@ -950,6 +950,30 @@
         }
       },
       {
+        "file": "#source/js/counter.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "js/counter.js",
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "#source/js/jquery.counter.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "js/jquery.counter.js",
+          "autoCompile": true
+        }
+      },
+      {
         "file": "#source/js/main-dist.js",
         "config": {
           "customOutput": "js/main-dist.js",
@@ -969,6 +993,18 @@
               "enable": false
             }
           }
+        }
+      },
+      {
+        "file": "#source/js/script.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "js/script.js",
+          "autoCompile": true
         }
       },
       {
